--- a/style.css
+++ b/style.css
@@ -1,22 +1,26 @@
+* {
+	margin: 0px;
+	padding: 0px;
+}
 html {
-	height: 100%;
+	min-width: 500px;
+	text-align: center;
+	font-size: 2em;
 }
-
-body {
-    min-width:600px;
-    background-color: #263248;
-}
-
-p {
-	color: #FFFFFF;
-}
-
 #alert {
-	color: red;
-	background-color: white;
-	min-height: 100%;
+	margin-top: 10px;
 }
-
-footer {
-	vertical-align: center;
+body {
+	background-color: #E8CAA4
+}
+.row {
+	width:100%;
+	overflow: auto;
+}
+.row article {
+	width: 49%;
+	float:left;
+}
+.result {
+	color:#CC2A41;
 }
